// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should NOT render <Message /> 1`] = `null`;

exports[`Message component should render <Message /> and compare with snapshot 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  link={true}
                  style={
                    [
                      {
                        "color": "black",
                      },
                      undefined,
                      undefined,
                    ]
                  }
                  user={
                    {
                      "_id": 1,
                    }
                  }
                >
                  <Text>
                    test
                  </Text>
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#aaa",
                        "fontSize": 10,
                        "textAlign": "right",
                      },
                      undefined,
                    ]
                  }
                >
                  8:20 PM
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render <Message /> with Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "marginRight": 8,
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        accessibilityRole="image"
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "borderRadius": 20,
              "height": 40,
              "width": 40,
            },
            {
              "backgroundColor": "transparent",
            },
            [
              {
                "borderRadius": 18,
                "height": 36,
                "width": 36,
              },
              undefined,
            ],
          ]
        }
      />
    </View>
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  link={true}
                  showUserAvatar={true}
                  style={
                    [
                      {
                        "color": "black",
                      },
                      undefined,
                      undefined,
                    ]
                  }
                  user={
                    {
                      "_id": 1,
                    }
                  }
                >
                  <Text>
                    test
                  </Text>
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#aaa",
                        "fontSize": 10,
                        "textAlign": "right",
                      },
                      undefined,
                    ]
                  }
                >
                  8:20 PM
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Message component should render null if user has no Avatar 1`] = `
<View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginLeft": 8,
          "marginRight": 0,
        },
        {
          "marginBottom": 10,
        },
        {
          "marginBottom": 2,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "alignItems": "flex-start",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f0f0f0",
              "borderRadius": 15,
              "justifyContent": "flex-end",
              "marginRight": 60,
              "minHeight": 20,
            },
            null,
            null,
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                      "marginTop": 5,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  link={true}
                  showUserAvatar={true}
                  style={
                    [
                      {
                        "color": "black",
                      },
                      undefined,
                      undefined,
                    ]
                  }
                  user={
                    {
                      "_id": 1,
                    }
                  }
                >
                  <Text>
                    test
                  </Text>
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "marginBottom": 5,
                      "marginLeft": 10,
                      "marginRight": 10,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#aaa",
                        "fontSize": 10,
                        "textAlign": "right",
                      },
                      undefined,
                    ]
                  }
                >
                  8:20 PM
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
